devscripts (2.9.6) UNRELEASED; urgency=low
PLEASE DON'T RELEASE ME YET - bts IS IN AN INCONSISTENT STATE!!
  
  [ Julian Gilbey ]
  * bts: tags: revert change in 2.9: reinstate "fixed-in-experimental" (it
    still appears to be in use) and don't need "help" twice (Closes: #325480)
  * checkbashisms: correctly detect "function" keyword (Closes: #324599)
  * uscan: report on package being scanned when --report is used (Closes:
    #324102)
  * uscan: provide --report-status option to distinguish from --report,
    which is now quieter (Closes: #325097, #325980)

  [ Filippo Giunchedi ]
  * uscan: fixed some repeated tags when used with --dehs
  * uscan: expand some entities in dehs_output
  * bts: download bugs.css and use it (Closes: #323781)
  * bts: remove some old cache handling cruft since sarge is released

  [ Joey Hess ]
  * dd-list: add --dctrl option for quick reading from grep-dctrl.
  * grep-excuses: remove special case for running locally on ftp-master,
    which breaks every time ftp-master moves (or directories are reorganised),
    and only saved some loopback traffic anyway.
  * grep-excuses: fix non-robust html parsing that caused ugly messages
    when it failed to find </ul> at the end of the excuses file due
    to reformatting.

 -- Julian Gilbey <jdg@polya.uklinux.net>  Thu,  1 Sep 2005 07:17:00 +0100

devscripts (2.9.5) unstable; urgency=low

  [ Joey Hess ]
  * bts: Make block command accept "by" or "with" after the blocked bug,
    but do not make either mandatory.
  * debcommit: try to add support for svk

  [ Julian Gilbey ]
  * bts: fix clone command (Closes: #321798)
  * debchange: add comment to manpage about building sponsored uploads
    (Closes: #321960)
  * debchange: introduce --create option: allows creation of changelogs /
    NEWS files (Closes: #220755, #322716), and inform user about this
    option if changelog / NEWS file is not found (Closes: #316661)
  * debchange: allow option (--nomultimaint) to not use this